# Parallel-Computing-2021-1

./: .gitignore  CMakeLists.txt  README.md  image-effect-par.cpp  image-effect-seq.cpp  input.cpp  input.hpp  main.cpp  main2.cpp  makefile  script_ejecutar_todo.py
Cuda/: README.md  image-effect-cuda.cu  image-effect-par.cu  input.cpp  makefile  script_ejecutar_todo.py
MPI/: README.md  ejecutar_mpi.sh  image-effect-seq.cpp  makefile  mpi.cpp  script_ejecutar_todo.py  split-image.cpp
OpenMP/: image-effect-par.cpp  image-effect-seq.cpp  makefile  script_ejecutar_todo.py
POSIX/: CMakeLists.txt  image-effect-par.cpp  image-effect-seq.cpp  input.hpp
